# bioinformatics-algorithms

./: README.md
6-Dynamic-Programming/: change.js
9-combinatorial-pattern-matching/: 9.2-duplicate-removal.js  9.3-pattern-matching.js
Divide-and-Conquer/: 7.1-mergeSort.js  space_efficient_nw.js
iab/: aln.py
implementation/js/: package.json
implementation/js/alignment/: _application.js  _params.js  _random.js  _show.js  needleman_wunsch.js  needleman_wunsch_semi.js  smith_waterman.js
implementation/js/alignment/matrices/: a.txt  conv.py  matrices.js
implementation/python/: readme.md
implementation/python/alignment/: needleman_wunsch.py
implementation/python/alignment/substitution_matrices/: matrices.py
implementation/rust/: Cargo.toml
implementation/rust/alignment/: commons.rs  needleman_wunsch.rs  smith_waterman.rs
implementation/rust/benches/: needleman.rs
implementation/rust/src/: alignment.rs  main.rs
implementation/rust/src/alignment/: affine_space_efficient.rs  common.rs  needleman_wunsch.rs  needleman_wunsch_1.rs  pairwise.rs  pairwise1.rs  pairwise_space_efficient.rs
implementation/rust/src/alignment/archive/: needleman_wunsch.rs
tests/alignment/: DNA
