[package]
name = "bioinformatics-algorithms"
version = "0.1.0"
authors = ["Tianyi Shi <ShiTianyi2001@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13"
num-traits = "0.2"
nalgebra = "0.18"
bio = "0.32"
kodama = "0.1"